--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +8,20 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="from_container">
+<form class="search-form" id="search-form">
+  <input type="text" name="searchQuery"autocomlete="off"placeholder =" Search images..."/>
+<button type="submit">Search</button>
+</form>
+    </div>
+    <div class="gallery">
+
+    </div>
+  
+    <button type="button" class="load-more">Load more</button>
+  
+  
+      <script src="index.js" type="module"></script>
+    
   </body>
 </html>
