--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <meta name="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Homework 11</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
+
   <body>
-    <div class="from_container">
+ <div class="from_container">
 <form class="search-form" id="search-form">
   <input type="text" name="searchQuery"autocomlete="off"placeholder =" Search images..."/>
 <button type="submit">Search</button>
 </form>
+
     </div>
     <div class="gallery">
 
